# EvilDungeons

./: .gitignore  CMakeLists.txt  CMakePresets.json  mingw-w64.7z  rename_dirs.ps1  rename_to_snake_case.ps1  update_includes.ps1
assets/models/sonic_the_hedgehog/: scene.gltf
include/: main.h  main.hpp
include/engine-core/components/: component.hpp  player_component.hpp  renderer_component.hpp  transform_component.hpp
include/engine-core/core/: camera.hpp  game_object.hpp  light_system.hpp  render_system.hpp  window.hpp
include/engine-core/graphics/: model.hpp  shader.hpp  texture.hpp
include/engine-core/graphics/binder/: i_uniform_binder.hpp
include/engine-core/graphics/factories/: material_factory.hpp
include/engine-core/graphics/managers/: shader_manager.hpp  texture_manager.hpp
include/engine-core/graphics/renderable/: mesh_renderable.hpp  model_renderable.hpp
include/engine/components/: baseComponent.hpp  cameraComponent.hpp  colliderComponent.hpp  component.hpp  components.hpp  lightComponent.hpp  playerComponent.hpp  rendererComponent.hpp  transformComponent.hpp
include/engine/core/: camera.hpp  gameObject.hpp  inputManager.hpp  lightSystem.hpp  model.hpp  renderSystem.hpp  scene.hpp  sceneManager.hpp  window.hpp
include/engine/core/systems/: collisionSystem.hpp
include/engine/graphics/: mesh.hpp  meshFactory.hpp  model.hpp  renderer.hpp  shader.hpp  texture.hpp  texture2dArray.hpp  textureManager.hpp
include/engine/graphics/binder/: IUniformBinder.hpp  PhongBinder.hpp  emissiveBinder.hpp  phongBinder.hpp
include/engine/graphics/factories/: materialFactory.hpp
include/engine/graphics/managers/: shaderManager.hpp  textureManager.hpp
include/engine/graphics/renderable/: IRenderable.hpp  MeshRenderable.hpp  ModelRenderable.hpp
include/engine/utils/: types.hpp
include/engine_core/components/: cameraComponent.hpp  lightComponent.hpp
include/engine_core/core/: inputManager.hpp  scene.hpp  sceneManager.hpp
include/engine_core/engine_utils/: types.hpp
include/engine_core/graphics/: mesh.hpp  meshFactory.hpp
include/engine_core/graphics/binder/: emissiveBinder.hpp  phongBinder.hpp
include/engine_core/graphics/renderable/: IRenderable.hpp
include/game-engine/scenes/: minecraft_scene.hpp
include/game/scenes/: minecraftScene.hpp  sonicScene.hpp
include/game/utils/: types.hpp
include/game/world/: chunk.hpp  world.hpp  worldComponent.hpp
include/game_engine/game_utils/: types.hpp
include/game_engine/scenes/: sonicScene.hpp
include/game_engine/world/: chunk.hpp  worldComponent.hpp
shaders/: basic.frag  basic.vert
shaders/light/: light.frag  light.vert
shaders/model/: basic.frag  basic.vert
shaders/sky/: basic.vert
shaders/super_cube/: basic.frag
shaders/voxel/: basic.frag  basic.vert
src/: main.cpp
src/engine-core/components/: camera_component.cpp  component.cpp  player_component.cpp
src/engine-core/core/: camera.cpp  game_object.cpp  light_system.cpp
src/engine-core/graphics/: shader.cpp  texture.cpp
src/engine-core/graphics/binder/: phong_binder.cpp
src/engine-core/graphics/managers/: shader_manager.cpp
src/engine/components/: baseComponent.cpp  cameraComponent.cpp  colliderComponent.cpp  component.cpp  lightComponent.cpp  playerComponent.cpp  rendererComponent.cpp
src/engine/core/: camera.cpp  gameObject.cpp  inputManager.cpp  lightSystem.cpp  model.cpp  sceneManager.cpp
src/engine/core/systems/: collisionSystem.cpp
src/engine/graphics/: model.cpp  shader.cpp  texture.cpp
src/engine/graphics/binder/: emissiveBinder.cpp  phongBinder.cpp
src/engine/graphics/managers/: shaderManager.cpp
src/engine_core/components/: lightComponent.cpp  rendererComponent.cpp
src/engine_core/core/: inputManager.cpp  sceneManager.cpp
src/engine_core/graphics/: model.cpp
src/engine_core/graphics/binder/: emissiveBinder.cpp
src/game-engine/scenes/: sonic_scene.cpp
src/game-engine/world/: world_component.cpp
src/game/scenes/: minecraftScene.cpp  sonicScene.cpp
src/game/world/: chunk.cpp  world.cpp  worldComponent.cpp
src/game_engine/scenes/: minecraftScene.cpp
src/game_engine/world/: chunk.cpp
